Integrate native and C# console generatior components

--- a/NativeTimelapseGenerator/.gitignore
+++ b/NativeTimelapseGenerator/.gitignore
@@ -2,4 +2,6 @@
 main
 main.exe
 backups/
-generator
+NativeTimelapseGenerator
+NativeTimelapseGenerator.Console.so
+NativeTimelapseGenerator.Console.so.dbg
