--- a/NativeTimelapseGenerator/.gitignore
+++ b/NativeTimelapseGenerator/.gitignore
@@ -1,7 +1,7 @@
 # Project files
-main
-main.exe
 backups/
+rslashplace2.github.io/
+canvas1/
 NativeTimelapseGenerator
 NativeTimelapseGenerator.Console.so
 NativeTimelapseGenerator.Console.so.dbg
