--- a/NativeTimelapseGenerator/.gitignore
+++ b/NativeTimelapseGenerator/.gitignore
@@ -6,3 +6,5 @@ NativeTimelapseGenerator
 NativeTimelapseGenerator.Console.so
 NativeTimelapseGenerator.Console.so.dbg
 logs.txt
+timelapse.mp4
+build/
