Canvas saver date fixes, image generator safety fixes & date text rendering styles

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/NativeTimelapseGenerator/NativeTimelapseGenerator",
-            "args": [],
+            "program": "${workspaceFolder}/NativeTimelapseGenerator/build/NativeTimelapseGenerator",
+            "args": [ "--no-cli", "--commit-hashes-file=commit_hashes.txt" ],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}/NativeTimelapseGenerator/build",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
