--- a/NodeBackupGenerator/package.json
+++ b/NodeBackupGenerator/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "neo",
+  "name": "NodeBackupGenerator",
   "version": "1.0.0",
-  "description": "1",
-  "main": "downloader.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "jimp": "^0.16.1",
-    "node-fetch": "^3.2.3"
+    "node-fetch": "^3.2.3",
+    "yargs": "^17.7.2"
   }
 }
