[BROKEN] Upgrade console to Terminal.Gui v2, memory fixes & top placers work

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "NativeTimelapseGenerator/parson"]
 	path = NativeTimelapseGenerator/parson
 	url = https://github.com/kgabis/parson
+[submodule "Terminal.Gui"]
+	path = Terminal.Gui
+	url = https://github.com/gui-cs/Terminal.Gui
