--- a/NativeTimelapseGenerator/web/package.json
+++ b/NativeTimelapseGenerator/web/package.json
@@ -10,7 +10,8 @@
 	},
 	"dependencies": {
 		"golden-layout": "^2.6.0",
-		"lit": "^3.2.1"
+		"lit": "^3.2.1",
+		"nanobuf": "^1.1.3"
 	},
 	"devDependencies": {
 		"typescript": "~5.6.2",
