[BIG] Generalise work queue, networking & socket fixes, save all render outputs, WIP: Start integrating tracking database + schema fixes

--- a/NativeTimelapseGenerator/CMakeLists.txt
+++ b/NativeTimelapseGenerator/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SOURCE_FILES
 	${CMAKE_SOURCE_DIR}/workers/save_worker.c
 	${CMAKE_SOURCE_DIR}/workers/render_worker.c
 	${CMAKE_SOURCE_DIR}/console.c
+	${CMAKE_SOURCE_DIR}/database.c
 )
 
 # Add executable
