--- a/NativeTimelapseGenerator/web/tsconfig.json
+++ b/NativeTimelapseGenerator/web/tsconfig.json
@@ -6,6 +6,10 @@
 		"module": "ESNext",
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"skipLibCheck": true,
+		"typeRoots": ["./@types", "./node_modules/@types"],
+		"paths": {
+			"nanobuf": ["./@types/nanobuf.d.ts"]
+		},
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
@@ -21,5 +25,5 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*", "types"]
 }
