--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,12 +6,62 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/NativeTimelapseGenerator/build/NativeTimelapseGenerator",
-            "args": [ "--commit-hashes-file=example_commit_hashes.txt" ],
+            "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/NativeTimelapseGenerator/build",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) Launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/NativeTimelapseGenerator/build/NativeTimelapseGenerator",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/NativeTimelapseGenerator/build",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "preLaunchTask": "Build with CMake", // Add this line
+            "setupCommands": [
+              {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+              },
+              {
+                "description": "Set Disassembly Flavor to Intel",
+                "text": "-gdb-set disassembly-flavor intel",
+                "ignoreFailures": true
+              }
+            ]
+        },
+        {
+            "name": "Build with CMake and Run with GDB",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/NativeTimelapseGenerator/build/NativeTimelapseGenerator",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/NativeTimelapseGenerator/build",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "preLaunchTask": "Build with CMake",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
