--- a/NodeBackupGenerator/package.json
+++ b/NodeBackupGenerator/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "NodeBackupGenerator",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "type": "module",
-  "author": "",
-  "license": "GPL-3.0-only",
-  "dependencies": {
-    "jimp": "^0.16.1",
-    "node-fetch": "^3.2.3",
-    "yargs": "^17.7.2"
-  }
+	"name": "NodeBackupGenerator",
+	"version": "1.0.0",
+	"description": "",
+	"main": "generate.ts",
+	"scripts": {},
+	"type": "module",
+	"author": "",
+	"license": "GPL-3.0-only",
+	"dependencies": {
+		"@types/bun": "^1.2.19",
+		"@types/yargs": "^17.0.33",
+		"canvas": "^3.1.2",
+		"jimp": "^0.16.1",
+		"node-fetch": "^3.2.3"
+	}
 }
